# memoryplane

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-31-agent-first-cli-v2.md  2026-03-31-memctl.md  2026-03-31-memoryplane-v1-1.md
docs/superpowers/specs/: 2026-03-31-memctl-design.md  2026-03-31-memoryplane-v1-1-design.md
skills/using-memoryplane/: SKILL.md
src/memoryplane/: __init__.py  cli.py  client.py  config.py  config_runtime.py  models.py  paths.py
src/memoryplane/services/: catalog_service.py  distill_service.py  eval_service.py  init_service.py  inspect_service.py  merge_service.py  pack_service.py  search_service.py  write_service.py
src/memoryplane/storage/: __init__.py  candidates.py  canonical.py  index.py  projections.py
src/memoryplane/utils/: json_output.py  text.py  validation.py
tests/: test_agent_cli_v2.py  test_cli_improvements.py  test_init.py  test_merge_distill_eval.py  test_sdk.py  test_search_and_pack.py  test_write_flow.py
