[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memoryplane"
version = "0.1.0"
description = "CLI memory control plane for agents"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1.0",
  "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
memoryplane = "memoryplane.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
